--- a/radio/index.html
+++ b/radio/index.html
@@ -567,8 +567,8 @@
                 </a>
                 <a href="https://www.youtube.com/playlist?list=PLJ32iBqIDcZ_W6jL936Vjc7-98x7gflm1" class="lang_se genre_pop loc_montecydia">
                     <li>
-                        <img src="https://i.ibb.co/dM2dJny/radiokolencydam2.png">
-                        <span>Radio Kolenstad</span>
+                        <img src="https://i.ibb.co/p6YDZMPh/kolencydam-radio-Obszar-roboczy-1.png">
+                        <span>Kolenstad Radio</span>
                     </li>  
                 </a>
         </ul>
