--- a/radio/index.html
+++ b/radio/index.html
@@ -556,7 +556,7 @@
                 <a href="https://www.youtube.com/playlist?list=PLpUj5VNghWeRRRM_V92H4pb0S8rKDKnRc" class="lang_en genre_rock genre_metal loc_zoltostan">
                     <li>
                         <img src="https://i.ibb.co/t0MJNz9/radio-werigrad-Obszar-roboczy-1.png">
-                        <span>Werigrad Radio</span>
+                        <span>Радіо Верiград</span>
                     </li>  
                 </a>
                 <a href="https://www.youtube.com/playlist?list=PL8YJXgkG6ZjnX2m1zG0bpOvFX_pW8iQHs" class="lang_pl genre_rock genre_pop loc_pamercja">
