--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="info-tile half" style="display: flex; align-items: center;">
                 <div class="shadow" style="width: 90%; height: 500px; right: -200px; top: -400px;"></div>
                 <div style="width: 100%; height: fit-content;">
-                <div style="background-image: url(https://i.ibb.co/LY5j2qZ/radia.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 33%; height: 90%; border-top-left-radius: 1rem; position: absolute; top: 10%; right: 0; opacity: 0.75; z-index: -1;"></div>
+                <div style="background-image: url(https://i.ibb.co/zH4yydf0/radyjka.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 33%; height: 90%; border-top-left-radius: 1rem; position: absolute; top: 10%; right: 0; opacity: 0.75; z-index: -1;"></div>
                     <h1 style="text-align: left; margin: 0;">Stacje Radiowe</h1>
                     <p style="text-align: left; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Słuchaj muzyki z całego świata</p>
                     <a style="float: left;" href="https://grumqy.github.io/fangea/radio/" class="button-href map"><i class="fa-solid fa-radio"></i>Posłuchaj Radia</a>
