--- a/radio/index.html
+++ b/radio/index.html
@@ -304,6 +304,9 @@
         main #radio-list ul a.genre_metal{
             display: contents; 
         }
+        main #radio-list ul a.genre_klasyczna{
+            display: contents; 
+        }
         main #radio-list ul a.genre_info{
             display: contents; 
         }
@@ -440,7 +443,7 @@
     <div>Filtruj wg gatunku</div>
     <ul>
         <form>
-        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_hardstyle;genre_nightcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_altrock;genre_indierock;genre_metal;genre_info" checked>
+        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_hardstyle;genre_nightcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_altrock;genre_indierock;genre_metal;genre_klasyczna;genre_info" checked>
         <input type="checkbox" id="genre_pop" checked>
         <input type="checkbox" id="genre_citypop" checked>
         <input type="checkbox" id="genre_electro" checked>
@@ -460,6 +463,7 @@
         <input type="checkbox" id="genre_altrock" checked>
         <input type="checkbox" id="genre_indierock" checked>
         <input type="checkbox" id="genre_metal" checked>
+        <input type="checkbox" id="genre_klasyczna" checked>
         <input type="checkbox" id="genre_info" checked>
         </form>
         <label for="genre_all" class="active">
@@ -522,6 +526,9 @@
         <label for="genre_metal" class="active">
             <li>Metal</li>
         </label>
+        <label for="genre_klasyczna" class="active">
+            <li>Muzyka Klasyczna</li>
+        </label>
         <label for="genre_info" class="active">
             <li>Informacyjne</li>
         </label>
@@ -569,6 +576,12 @@
                     <li>
                         <img src="https://i.ibb.co/p6YDZMPh/kolencydam-radio-Obszar-roboczy-1.png">
                         <span>Kolenstad Radio</span>
+                    </li>  
+                </a>
+                <a href="https://www.youtube.com/playlist?list=PLJ32iBqIDcZ_sQGYYk_cXI6QMH6SAJz18" class="lang_se genre_klasyczna loc_montecydia">
+                    <li>
+                        <img src="https://i.ibb.co/NgDtdt4P/not-input-Obszar-roboczy-1.png">
+                        <span>Not Input</span>
                     </li>  
                 </a>
         </ul>
