--- a/radio/index.html
+++ b/radio/index.html
@@ -584,6 +584,12 @@
                         <span>Not Input</span>
                     </li>  
                 </a>
+                <a href="https://www.youtube.com/playlist?list=PLJ32iBqIDcZ-Dq6HLg3xzoAjlUJJKR7YR" class="lang_se genre_hiphop loc_montecydia">
+                    <li>
+                        <img src="https://i.ibb.co/GQqXQvRL/echora-Obszar-roboczy-1.png">
+                        <span>EchoRå</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
