--- a/radio/index.html
+++ b/radio/index.html
@@ -596,6 +596,12 @@
                         <span>Radio Zen</span>
                     </li>  
                 </a>
+                <a href="https://www.youtube.com/playlist?list=PLuvfpLAys6uXku0N2dVAKp6Lhulcw1UOs" class="lang_pl genre_metal genre_hardstyle genre_electro loc_pamercja">
+                    <li>
+                        <img src="https://i.ibb.co/nNn1YK3c/sigma-radio-Obszar-roboczy-1.png">
+                        <span>Sigma Radio</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
