--- a/wiki/mmt_transport/index.html
+++ b/wiki/mmt_transport/index.html
@@ -14,7 +14,6 @@
 <meta property="og:image:width" content="3747">
 <meta property="og:image:height" content="1862">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/fangea/style.css" />
 <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
@@ -28,7 +27,7 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>MMT Transport</div><span>05.11.2024</span></header>
+<header><div>MMT Transport</div><span>27.04.2025</span></header>
 <table class="infobox"><caption>MMT Transport</caption><tbody><tr><th style="text-align: center;" colspan="2"> (Marcin Modrzejewski Transport Sp. z o.o.)</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/pw5NBbF/mmt-transport.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/węgorzewo/">Węgorzewo</a> </td></tr><tr><th>Adres</th><td> ul. Postępu 12<br>Węgorzewo </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Marcin Modrzejewski </td></tr><tr><th>Dyrektor</th><td> Olgierd Konecki </td></tr><tr><th>Zatrudnienie</th><td> 40 (2020) </td></tr></tbody></table>
 
 <p><b>MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.)</b> – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego.</p>
@@ -46,7 +45,9 @@
 <li>Project Cargo,</li>
 <li>farmaceutyków,</li>
 <li>w temperaturze kontrolowanej.</li></ul>
-<figure class="left"><img src="https://i.ibb.co/yRj4Cqf/mmt-stare.png" alt="Logo MMT Transport używane do 2009 roku"><figcaption>Logo MMT Transport używane do 2009 roku</figcaption></figure>
+<figure class="left"><img src="https://i.ibb.co/YBpF554r/Zrzut-ekranu-2025-04-27-174709.png" alt="Jedna z ciężarówek floty firmy – logo MMT Transport widoczne na naczepie"><figcaption>Jedna z ciężarówek floty firmy – logo MMT Transport widoczne na naczepie</figcaption></figure>
+
+<figure class="right"><img src="https://i.ibb.co/yRj4Cqf/mmt-stare.png" alt="Logo MMT Transport używane do 2009 roku"><figcaption>Logo MMT Transport używane do 2009 roku</figcaption></figure>
 
 <p>Od 2018 roku firma prowadzi cykl warsztatów prezentujących pracę na stanowisku spedytora w gałęziach transportu drogowego, morskiego, lotniczego, kolejowego, Project Cargo oraz w przewozach farmaceutyków. Jest to jednocześnie prezentacja dobrych praktyk i sposobów działania, które od razu można wykorzystać w pracy na wszystkich stanowiskach związanych z logistyką.</p>
 
@@ -80,7 +81,9 @@ MMT Transport to operator logistyczny świadczący usługi w zakresie transportu
 * farmaceutyków,
 * w temperaturze kontrolowanej.
 
-[[img:https://i.ibb.co/yRj4Cqf/mmt-stare.png|left|Logo MMT Transport używane do 2009 roku]]
+[[img:https://i.ibb.co/YBpF554r/Zrzut-ekranu-2025-04-27-174709.png|left|Jedna z ciężarówek floty firmy – logo MMT Transport widoczne na naczepie]]
+
+[[img:https://i.ibb.co/yRj4Cqf/mmt-stare.png|right|Logo MMT Transport używane do 2009 roku]]
 
 Od 2018 roku firma prowadzi cykl warsztatów prezentujących pracę na stanowisku spedytora w gałęziach transportu drogowego, morskiego, lotniczego, kolejowego, Project Cargo oraz w przewozach farmaceutyków. Jest to jednocześnie prezentacja dobrych praktyk i sposobów działania, które od razu można wykorzystać w pracy na wszystkich stanowiskach związanych z logistyką.
 
