--- a/kompas/index.html
+++ b/kompas/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polityczny Kompas Społeczności</title>
+    <title>Kompas Polityczny - Fangea i inne kontynenty</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <style>
         :root {
             --bg-color: #121212;
