--- a/kompas/index.html
+++ b/kompas/index.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
+!<!DOCTYPE html>
 <html lang="pl">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kompas Polityczny - Fangea i inne kontynenty</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
+    <title>Kompas Polityczny - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Kompas Polityczny">
+    <meta name="twitter:title" content="Kompas Polityczny">
+    <meta name="description" content="Kompas polityczny uczestników naszego Roleplay'u.">
+    <meta property="og:description" content="Kompas polityczny uczestników naszego Roleplay'u.">
+    <meta name="twitter:description" content="Kompas polityczny uczestników naszego Roleplay'u.">
+    <meta property="og:image" content="https://i.ibb.co/0QFtcSZ/pieniadze4.png">
+    <meta name="twitter:image" content="https://i.ibb.co/0QFtcSZ/pieniadze4.png">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/fangea/style.css" />
     <style>
         :root {
             --bg-color: #101920;
