--- a/kompas/index.html
+++ b/kompas/index.html
@@ -51,7 +51,7 @@
             height: 800px;
             margin: 20px auto;
             position: relative;
-            background: url('https://upload.wikimedia.org/wikipedia/commons/5/56/Political_Compass_yellow_LibRight_v2.svg') no-repeat center/contain;
+            background: url('https://grumqy.github.io/fangea/local/kompas.svg') no-repeat center/contain;
         }
 
         .pin {
