--- a/kompas/index.html
+++ b/kompas/index.html
@@ -37,19 +37,28 @@
             color: var(--text-color);
             min-height: 100vh;
             overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #pageheader {
+            flex-shrink: 0;
         }
 
         #wrapper {
-            width: 100%;
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             overflow-x: auto;
             padding: 20px 0;
-            -webkit-overflow-scrolling: touch;
+            min-height: calc(100vh - var(--header-height, 60px));
         }
 
         #compassContainer {
             width: 800px;
             height: 800px;
-            margin: 20px auto;
+            margin: 20px;
             position: relative;
             background: url('https://grumqy.github.io/fangea/local/kompas.svg') no-repeat center/contain;
         }
@@ -163,8 +172,13 @@
 
         @media (max-width: 480px) {
             #compassContainer {
-                width: 350px;
-                height: 350px;
+                width: calc(100vw - 20px);
+                height: calc(100vw - 20px);
+                margin: 10px;
+            }
+            
+            #wrapper {
+                min-height: calc(100vh - var(--header-height, 80px));
             }
         }
     </style>
@@ -243,10 +257,27 @@
             }, 300);
         }
 
+        function updateHeaderHeight() {
+            const header = document.getElementById('pageheader');
+            if (header) {
+                document.documentElement.style.setProperty('--header-height', `${header.offsetHeight}px`);
+            }
+        }
+
         // Inicjalizacja po załadowaniu DOM
         document.addEventListener('DOMContentLoaded', function() {
+            updateHeaderHeight();
             initPins();
+            
+            // Obserwuj zmiany w headerze (jeśli jest dynamiczny)
+            const observer = new MutationObserver(updateHeaderHeight);
+            const header = document.getElementById('pageheader');
+            if (header) {
+                observer.observe(header, { childList: true, subtree: true });
+            }
         });
+
+        window.addEventListener('resize', updateHeaderHeight);
     </script>
     <script src="/fangea/pageheader.js"></script>
 </body>
