--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
