--- a/wiki/index.html
+++ b/wiki/index.html
@@ -123,7 +123,7 @@
             </ul> 
         </div>
     </main>
-    <script src="/fangea/pageheader.js"></script>
+    <script src="pageheader.js"></script>
 </body>
 
 </html>
