--- a/kompas/index.html
+++ b/kompas/index.html
@@ -509,6 +509,6 @@
 
     window.addEventListener('resize', updateHeaderHeight);
     </script>
-    <script src="pageheader.js"></script>
+    <script src="/fangea/pageheader.js"></script>
 </body>
 </html>
