--- a/kompas/index.html
+++ b/kompas/index.html
@@ -338,7 +338,7 @@
                     posY: 2.3,
                     avatar: "https://i.ibb.co/n8bnkkDD/image.png",
                     description: "Główny zarządca Roleplay'u oraz właściciel serwera Discord. Zajmuję się szerokopojętą grafiką komputerową i to w niej spełniam się w naszym Roleplay'u – to ja stworzyłem większość flag, logo itp. na stronie. Odpowiadam również za niektóre scenerie w artykułach na wiki oraz dodałem kilka funkcji na naszej stronie. ",
-                    views: "Paleolibertarianizm, Kapitalizm, Tradycjonalizm",
+                    views: "Liberalny konserwatyzm, Neoliberalizm, Cywilny nacjonalizm",
                     roles: [
                         {
                             name: "Republika Lemburska",
