--- a/kompas/index.html
+++ b/kompas/index.html
@@ -354,7 +354,7 @@
                     posY: -2,
                     avatar: "https://i.ibb.co/hGthdxW/obraz-2025-05-12-110716160.png",
                     description: "Brak opisu.",
-                    views: "Liberalizm klasyczny, Kapitalizm, Leseferyzm, Globalizm, Federalizm",
+                    views: "Liberalizm klasyczny, Kapitalizm, Leseferyzm, Globalizm, Federalizm, Merytokracja",
                     roles: [
                         {
                             name: "Rzeczpospolita Pamercja",
