--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             }
         }
 
+        .custom-link {
+          color: #658aad;
+          text-decoration: none;
+          transition: text-decoration 0.2s ease;
+        }
+    
+        .custom-link:hover {
+          text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -257,7 +266,7 @@
             <div class="info-tile full" style="min-height: 350px; height: fit-content;">
                 <h1>O nas</h1>
                 <p>
-                    Fangea to miejsce, w którym członkowie naszej społeczności mogą brać czynny udział w Roleplay'u związanym z prowadzeniem oraz zarządzaniem swojego państwa położonego w fikcyjnym uniwersum Fangei bądź obserwować całą zabawę z góry jako obserwator. Zapewniamy wysoki poziom Roleplay'u oraz profesjonalne podejście do zabawy poprzez uwzględnienie wielu innowacyjnych funkcji takich jak m.in. szczegółowa mapa świata, kalkulator kursów walutowych, a nawet własna encyklopedia poświęcona uniwersum. Jeżeli chcesz poznać bliżej nas oraz nasze poglądy polityczne, kliknij <a href="https://grumqy.github.io/fangea/kompas/" style="color: #658aad;">tutaj</a>.
+                    Fangea to miejsce, w którym członkowie naszej społeczności mogą brać czynny udział w Roleplay'u związanym z prowadzeniem oraz zarządzaniem swojego państwa położonego w fikcyjnym uniwersum Fangei bądź obserwować całą zabawę z góry jako obserwator. Zapewniamy wysoki poziom Roleplay'u oraz profesjonalne podejście do zabawy poprzez uwzględnienie wielu innowacyjnych funkcji takich jak m.in. szczegółowa mapa świata, kalkulator kursów walutowych, a nawet własna encyklopedia poświęcona uniwersum. Jeżeli chcesz poznać bliżej nas oraz nasze poglądy polityczne, kliknij <a href="https://grumqy.github.io/fangea/kompas/" class="custom-link">tutaj</a>.
                 </p>
                 <div class="shadow" style="width: 120%; height: 500px; left: calc(50% - 700px); bottom: -400px;"></div>
             </div>
