--- a/kompas/index.html
+++ b/kompas/index.html
@@ -368,9 +368,9 @@
                     discord: "b4gni4k",
                     posX: 4,
                     posY: -2.8,
-                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
-                    description: "Brak opisu.",
-                    views: "Brak danych",
+                    avatar: "https://i.postimg.cc/W1vJbhrg/obraz-2025-05-12-152813966.png",
+                    description: "Najmłodszy członek Roleplay'u oraz administrator serwera Discord. Aspiruję do zastania profesjonalnym grafikiem komputerowym w przyszłości. W samym Roleplay'u pełnię rolę pomocnika, świadcząc swojej pomocy głównie przy mapach, flagach i innych pomniejszych rzeczach powiązanych z Roleplay'em.",
+                    views: "Ordoliberalizm, Federalizm centralistyczny, Liberalizm społeczny, Umiarkowany progresywizm",
                     roles: [
                         {
                             name: "Konfederacja Montecydyjska",
