--- a/kompas/index.html
+++ b/kompas/index.html
@@ -353,7 +353,7 @@
                     posX: 2.4,
                     posY: -2,
                     avatar: "https://i.ibb.co/hGthdxW/obraz-2025-05-12-110716160.png",
-                    description: "Najdłużej obecny członek Roleplay'u, jeden z założycieli oraz admimistrator serwera Discord. Łączę przyjemne z pożytecznym więc naukę grafiki 3D łączę z moją działalnością w Roleplay'u. W wolnym czasie moją pasją jest przede wszystkim kino.",
+                    description: "Najdłużej obecny członek Roleplay'u, jeden z założycieli oraz administrator serwera Discord. Łączę przyjemne z pożytecznym więc naukę grafiki 3D łączę z moją działalnością w Roleplay'u. W wolnym czasie moją pasją jest przede wszystkim kino.",
                     views: "Liberalizm klasyczny, Kapitalizm, Leseferyzm, Globalizm, Federalizm, Merytokracja",
                     roles: [
                         {
