--- a/kompas/index.html
+++ b/kompas/index.html
@@ -257,8 +257,8 @@
                     discord: "boxin_",
                     posX: 5.6,
                     posY: 0.5,
-                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
-                    description: "Brak opisu.",
+                    avatar: "https://i.ibb.co/NdWbvG3R/obraz-2025-05-12-160543464.png",
+                    description: "Administrator serwera Discord i członek Roleplay'u z 3-letnim stażem. Najczęściej zajmuję się pisaniem formułek, które można znaleźć na stronie internetowej oraz serwerze społecznościowym. Do moich zainteresowań należy historia, geografia oraz praca w McDonald's.",
                     views: "Brak danych",
                     roles: [
                         {
@@ -368,7 +368,7 @@
                     discord: "b4gni4k",
                     posX: 4,
                     posY: -2.8,
-                    avatar: "https://i.postimg.cc/W1vJbhrg/obraz-2025-05-12-152813966.png",
+                    avatar: "https://i.ibb.co/0Vzx598Y/image.png",
                     description: "Najmłodszy członek Roleplay'u oraz administrator serwera Discord. Aspiruję do zastania profesjonalnym grafikiem komputerowym w przyszłości. W samym Roleplay'u pełnię rolę pomocnika, świadcząc swojej pomocy głównie przy mapach, flagach i innych pomniejszych rzeczach powiązanych z Roleplay'em.",
                     views: "Ordoliberalizm, Federalizm centralistyczny, Liberalizm społeczny, Umiarkowany progresywizm",
                     roles: [
