--- a/kompas/index.html
+++ b/kompas/index.html
@@ -266,6 +266,11 @@
                             icon: "https://i.ibb.co/cSfjhpsx/image.png",
                             url: "https://grumqy.github.io/fangea/wiki/liwonia/"
                         }
+                        {
+                            name: "Makronezja",
+                            icon: "https://i.ibb.co/3mVXbXGV/image.png",
+                            url: "https://grumqy.github.io/fangea/wiki/makronezja/"
+                        }
                     ]
                 },
                 {
