--- a/kompas/index.html
+++ b/kompas/index.html
@@ -420,6 +420,11 @@
                             url: "https://grumqy.github.io/fangea/wiki/teran/"
                         },
                         {
+                            name: "Iturium Hewu",
+                            icon: "https://i.ibb.co/1Y6f0h9f/obraz-2025-05-12-162008402.png",
+                            url: "https://grumqy.github.io/fangea/wiki/hew/"
+                        },
+                        {
                             name: "Nadmroczańska Republika Ludowa",
                             icon: "https://i.ibb.co/nM7jJK2x/image.png",
                             url: "https://grumqy.github.io/fangea/wiki/nadmrocze/"
